Updates jvm.md
Auto commit by GitBook Editor